<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/addFacilityScrollView"
    android:background="@color/app_background_color"
    android:clipToPadding="false">

    <!--    presence_online-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:background="@color/posts_color"
        android:elevation="18dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/facilityType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Type:"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageFacilityType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="1dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_baseline_warning_24"/>

            </LinearLayout>

            <Spinner
                android:id="@+id/newFacilityType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dropDownWidth="match_parent"
                android:popupBackground="@color/posts_color_dark"
                android:popupTheme="@style/spinnerTheme"
                android:spinnerMode="dropdown"
                android:theme="@style/spinnerTheme"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/navyBlue"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/facilityTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Title"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/imageNewFacilityTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="1dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_baseline_warning_24" />

            </LinearLayout>

            <EditText
                android:id="@+id/newFacilityTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/posts_color_dark"
                android:defaultFocusHighlightEnabled="true"
                android:inputType="textMultiLine"
                android:padding="5dp"
                android:textColor="@color/white_light"
                android:textColorHint="@color/white_light"
                android:textSize="15sp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/facilityDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Description"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/imageFacilityDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="1dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_baseline_warning_24"/>
                </LinearLayout>

                <EditText
                    android:id="@+id/newFacilityDescription"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:background="@color/posts_color_dark"
                    android:defaultFocusHighlightEnabled="true"
                    android:gravity="start"
                    android:inputType="textMultiLine"
                    android:padding="5dp"
                    android:textColor="@color/white_light"
                    android:textColorHint="@color/white_light"
                    android:textSize="15sp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/locationLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/facilityLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Location:"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/imageFacilityLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="1dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_baseline_warning_24" />
                </LinearLayout>

                <EditText
                    android:id="@+id/newFacilityLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/posts_color_dark"
                    android:defaultFocusHighlightEnabled="true"
                    android:padding="5dp"
                    android:textColor="@color/white_light"
                    android:textColorHint="@color/white_light"
                    android:textSize="15sp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/facilityImageLink"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Image Link:"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/imageFacilityImageLink"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="1dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_baseline_warning_24"/>
                </LinearLayout>

                <EditText
                    android:id="@+id/newFacilityImageLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/posts_color_dark"
                    android:defaultFocusHighlightEnabled="true"
                    android:padding="5dp"
                    android:textColor="@color/white_light"
                    android:textColorHint="@color/white_light"
                    android:textSize="15sp"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <Button
                        android:id="@+id/submitAll"
                        style="?android:attr/borderlessButtonStyle"
                        android:textStyle="bold"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/UBCBlue"
                        android:text="Submit"
                        android:textSize="18sp"
                        android:textColor="@color/UBCyellow"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/cleanAll"
                        style="?android:attr/borderlessButtonStyle"
                        android:textStyle="bold"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/UBCNavyBlue"
                        android:text="Clean All"
                        android:textSize="18sp"
                        android:textColor="#CCFFFFFF"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>